# cjm-capability-demucs

./: README.md  capability.html  capability.html.md  environment.yml  index.html  plugins_test.yaml  pyproject.toml  robots.txt  search.json  sitemap.xml
cjm_capability_demucs/: _modidx.py  capability.py
cjm_media_plugin_demucs/: _modidx.py  meta.py  plugin.py
nbs/: capability.ipynb  index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb
tests_manual/: __init__.py  test_reconfigure.md  test_reconfigure.py  validate_demucs_e2e.md  validate_demucs_e2e.py
